--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -112,7 +112,7 @@
  b_thetford:0 "Thetford"
 
  d_clarence:0 "Clarence"
- c_clarence"0 "Clarence"
+ c_clarence:0 "Clarence"
  b_clarence:0 "Clarence"
  b_akron:0 "Akron"
  b_alden:0 "Alden"
