--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -334,3 +334,454 @@
  b_perf:0 "Perf"
  b_cole:0 "Cole"
  b_redditch:0 "Redditch"
+
+ k_faerghus:0 "Faerghus"
+ d_blaiddyd:0 "Blaiddyd"
+ c_fhirdiad:0 "Fhirdiad"
+ b_fhirdiad:0 :Fhirdiad"
+ b_lyon:0 "Lyon"
+ b_bron:0 "Bron"
+ b_jonage:0 "Jonage"
+ b_mornant:0 "Mornant"
+ b_mane:0 "Mane"
+ 
+ c_amiens:0 "Amiens"
+ b_amiens:0 "Amiens"
+ b_avem:0 "Avem"
+ b_trembe:0 "Trembe"
+ 
+ c_eurs:0 "Eurs"
+ b_eurs:0 "Eurs"
+ b_erquy:0 "Erquy"
+ b_botmeur:0 "Botmeur"
+ 
+ c_ratumac:0 "Ratumac"
+ b_ratumac:0 "Ratumac"
+ b_draynes:0 "Draynes"
+ b_duault:0 "Duault"
+
+ c_tailtean:0 "Tailtean"
+ b_tailtean:0 "Tailtean"
+ b_lancieux:0 "Lancieux"
+ b_tramain:0 "Tramain"
+
+ c_veliocasse:0 "Veliocasse"
+ b_veliocasse:0 "Veliocasse"
+ b_henon:0 "Henon"
+ b_radenac:0 "Radenac"
+
+ d_galatea:0 "Galatea"
+ c_galatea:0 "Galatea"
+ b_galatea:0 "Galatea"
+ b_bonnefoy:0 "Bonnefoy"
+ b_agne:0 "Agne"
+ b_croix:0 "Croix"
+
+ c_chartreuse:0 "Chartreuse"
+ b_chartreuse:0 "Chartreuse"
+ b_caenelles:0 "Caenelles"
+ b_beclac:0 "Beclac"
+
+ c_beaulie:0 "Beaulieu"
+ b_hever:0 "Hever"
+ b_cosen:0 "Cosen"
+
+ c_gwyne:0 "Gwyne"
+ b_gwyne:0 "Gwyne"
+ b_bommels:0 "Bommels"
+ b_mormont:0 "Mormont"
+
+ d_charon:0 "Charon"
+ c_charon:0 "Charon"
+ b_charon:0 "Charon"
+ b_vedas:0 "Vedas"
+ b_jean:0 "Jean"
+ b_juvinac:0 "Juvinac"
+
+ c_shrewe:0 "Shrewe"
+ b_shrewe:0 "Shrewe"
+ b_roudeau:0 "Roudeau"
+ b_gournier:0 "Gournier"
+
+ c_warwise:0 "Warwise"
+ b_warwise:0 "Warwise"
+ b_injoux:0 "Injoux"
+ b_aubepierre:0 "Aubepierre"
+
+ c_lenord:0 "Lenord"
+ b_lenord:0 "Lenord"
+ b_freyming:0 "Freyming"
+ b_balbin:0 "Balbin"
+
+ d_conand:0 "Conand"
+ c_conand:0 "Conand"
+ b_conand:0 "Conand"
+ b_bascons:0 "Bascons"
+ b_bisel:0 "Bisel"
+ b_chate:0 "Chate"
+
+ c_esses:0 "Esses"
+ b_esses:0 "Esses"
+ b_marigane:0 "Marigane"
+ b_aix:0 "Aix"
+
+ c_aurigniy:0 "Aurigniy"
+ b_aurigniy:0 "Aurigniy"
+ b_villau:0 "Villau"
+ b_cherble:0 "Cherble"
+
+ c_douvre:0 "Douvre"
+ b_douvre:0 "Douvre"
+ b_hyere:0 "Hyere"
+ b_vesy:0 "Vesy"
+
+ d_fraldarius:0 "Fraldarius"
+ c_fraldarius:0 "Fraldarius"
+ b_fraldarius:0 "Fraldarius"
+ b_carros:0 "Carros"
+ b_menton:0 "Menton"
+
+ c_wapont:0 "Wapont"
+ b_wapont:0 "Wapont"
+ b_laldosa:0 "Laldosa"
+ b_sispony:0 "Sispony"
+
+ c_guisnes:0 "Guisnes"
+ b_guisnes:0 "Guisnes"
+ b_arisnal:0 "Arisnal"
+ b_eserrat:0 "Eserrat"
+
+ c_fologne:0 "Fologne"
+ b_fologne:0 "Fologne"
+ b_casavilla:0 "Casavilla"
+ b_arans:0 "Arans"
+
+ d_gautier:0 "Gautier"
+ c_gautier:0 "Gautier"
+ b_gautier:0 "Gautier"
+ b_pau:0 "Pau"
+ b_biuros:0 "Biuros"
+ b_montardon:0 "Montardon"
+
+ c_gueldre:0 "Gueldre"
+ b_gueldre:0 "Gueldre"
+ b_certers:0 "Certers"
+ b_axivalle:0 "Axivalle"
+
+ c_frise:0 "Frise"
+ b_frise:0 "Frise"
+ b_juberri:0 "Juberri"
+ b_pal:0 "Pal"
+ 
+ c_sudfrise:0 "Sudfrise"
+ b_sudfrise:0 "Sudfrise"
+ b_villa:0 "Villa"
+
+ d_itha:0 "Itha"
+ c_itha:0 "Itha"
+ b_Itha:0 "Itha"
+ b_bordeaux:0 "Bordeaux"
+ b_pessac:0 "Pessac"
+ b_lormont:0 "Lormont"
+
+ c_foulde:0 "Foulde"
+ b_foulde:0 "Foulde"
+ b_caudrot:0 "Caudrot"
+ b_gauriac:0 "Gauriac"
+ 
+ c_montjoie:0 "Montjoie"
+ b_montjoie:0 "Montjoie"
+ b_escaudes:0 "Escaudes"
+ b_frontenac:0 "Frontenac"
+
+ c_clevris:0 "Clevris"
+ b_clevris:0 "Clevris"
+ b_gabarnac:0 "Gabarnac"
+ b_eyrans:0 "Eyrans"
+ 
+ d_langres:0 "Langres"
+ d_langres:0 "Langres"
+ b_langres:0 "Langres"
+ b_celsoy:0 "Celsoy"
+ b_brennes:0 "Brennes"
+ b_fontaine:0 "Fontaine"
+
+ c_juliers:0 "Juliers"
+ b_juliers:0 "Juliers"
+ b_tramecourt:0 "Tramecourt"
+ b_thiron:0 "Thiron"
+
+ c_looz:0 "Looz"
+ b_Looz:0 "Looz"
+ b_meylan:0 "Meylan"
+ b_ludes:0 "Ludes"
+ 
+ c_gand:0 "Gand"
+ b_gand:0 "Gand"
+ b_talissieu:0 "Talissieu"
+ b_bentry:0 "Bentry"
+
+ d_adharc:0 "Adharc"
+ c_adharc:0 "Adharc"
+ b_adharc:0 "Adharc"
+ b_llors:0 "Llors"
+ b_molleres:0 "Molleres"
+ b_merille:0 "Merille"
+ 
+ c_ryswise:0 "Ryswise"
+ b_Ryswise:0 "Ryswise"
+ b_coloma:0 "Coloma"
+ b_rochelle:0 "Rochelle"
+ 
+ c_renaix:0 "Renaix"
+ b_renaix:0 "Renaix"
+ b_xandre:0 "Xandre"
+ b_lagord:0 "Lagord"
+
+ d_magdred:0 "Magdred"
+ c_magdred:0 "Magdred"
+ b_magdred:0 "Magdred"
+ b_vertou:0 "Vertou"
+ b_reze:0 "Reze"
+ b_herblain:0 "Herblain"
+
+ c_florimont:0 "Florimont"
+ b_florimont:0 "Florimont"
+ b_villesauve:0 "Villesauve"
+ b_escous:0 "Escous"
+ 
+ c_montcarvel:0 "Montcarvel"
+ b_montcarvel:0 "Montcarvel"
+ b_aubagne:0 "Aubagne"
+ b_cravans:0 "Cravans"
+
+ d_lalonde:0 "Lalonde"
+ c_lalonde:0 "Lalonde"
+ b_lalonde:0 "Lalonde"
+ b_pernay:0 "Pernay"
+ b_luynes:0 "Luynes"
+ b_vouvray:0 "Vouvray"
+
+ c_mortagne:0 "Mortagne"
+ b_mortagne:0 "Mortagne"
+ b_clairfaye:0 "Clairfaye"
+ b_feline:0 "Feline"
+
+ c_resin:0 "Resin"
+ b_resin:0 "Resin"
+ b_sonchamp:0 "Sonchamp"
+ b_escoureille:0 "Escoureille"
+
+ c_leon:0 "Leon"
+ b_leon:0 "Leon"
+ b_valier:0 "Valier"
+ b_verneix:0 "Verneix"
+
+ d_roland:0 "Roland"
+ c_roland:0 "Roland"
+ b_roland:0 "Roland"
+ b_limeray:0 "Limeray"
+ b_mosnes:0 "Mosnes"
+ b_cangey:0 "Cangey"
+
+ c_roncevaux:0 "Roncevaux"
+ b_roncevaux:0 "Roncevaux"
+ b_bouligny:0 "Bouligny"
+ b_loire:0 "Loire"
+ 
+ c_blaye:0 "Blaye"
+ b_blaye:0 Blaye"
+ b_lesperre:0 "Lesperre"
+ b_delettes:0 "Delettes"
+ 
+ c_vitre:0 "Vitre"
+ b_vitre:0 "Vitre"
+ b_tourche:0 "Tourche"
+ b_chasseignes:0 "Chasseignes"
+ 
+ d_gaspard:0 "Gaspard"
+ c_gaspard:0 "Gaspard"
+ b_gaspard:0 "Gaspard"
+ b_rhue:0 "Rhue"
+ b_chante:0 "Chante"
+ b_bruz:0 "Bruz"
+ 
+ c_balthasar:0 "Balthasar"
+ b_balthasar:0 "Balthasar"
+ b_champsecret:0 "Champsecret"
+ b_poucelange:0 "Poucelange"
+
+ c_melchior:0 "Melchior"
+ b_melchior:0 "Melchior"
+ b_montmarault:0 "Montmarault"
+ b_venoize:0 "Venoize"
+
+ c_zorastre:0 "Zorastre"
+ b_Zorastre:0 "Zorastre"
+ b_dancharia:0 "Dancharia"
+ b_lafitte:0 "Lafitte"
+ 
+ d_rowe:0 "Rowe"
+ c_rowe:0 "Rowe"
+ b_rowe:0 "Rowe"
+ b_porse:0 "Porse"
+ b_argol:0 "Argol"
+ b_crozon:0 "Crozon"
+
+ c_arianrhod:0 "Arianrhod"
+ b_Arianrhod:0 "Arianrhod"
+ b_lanrivore:0 "Lanrivore"
+ b_aynes:0 "Aynes"
+ 
+ c_ampuis:0 "Ampuis"
+ b_ampuis:0 "Ampuis"
+ b_villaudric:0 "Villaudric"
+ b_reculefort:0 "Reculefort"
+
+ c_soyers:0 "Soyers"
+ b_soyers:0 "Soyers"
+ b_vero:0 "Vero"
+ b_coppel:0 "Coppel"
+ 
+ d_gideon:0 "Gideon"
+ c_gideon:0 "Gideon"
+ b_gideon:0 "Gideon"
+ b_plemont:0 "Plemont"
+ b_aubin:0 "Aubin"
+ b_helier:0 "Helier"
+ 
+ c_midian:0 "Midian"
+ b_midian:0 "Midian"
+ b_bassoncourt:0 "Bassoncourt"
+ b_fronton:0 "Fronton"
+
+ c_goetinge:0 "Goetinge"
+ b_goetinge:0 "Goetinge"
+ b_varie:0 "Varie"
+ b_montresor:0 "Montresor"
+ 
+ c_leine:0 "Leine"
+ b_leine:0 "Leine"
+ b_margueray:0 "Margueray"
+ b_turgon:0 "Turgon"
+
+ d_mateus:0 "Mateus"
+ c_mateus:0 "Mateus"
+ b_mateus:0 "Mateus"
+ b_pleinmont:0 "Pleinmont"
+ b_eree:0 "Eree"
+ b_vazon:0 "Vazon"
+ 
+ c_tricasse:0 "Tricasse"
+ b_tricasse:0 "Tricasse"
+ b_gigean:0 "Gigean"
+ b_velotte:0 "Velotte"
+
+ c_mettis:0 "Mettis"
+ b_mettis:0 "Mettis"
+ b_missy:0 "Missy"
+ b_lamoura:0 "Lamoura"
+ 
+ c_lourene:0 "Lourene"
+ b_lourene:0 "Lourene"
+ b_uruffe:0 "Uruffe"
+ b_bricque:0 "Bricque"
+ 
+ d_genevieve:0 "Genevieve"
+ c_genevieve:0 "Genevieve"
+ b_genevieve:0 "Genevieve"
+ b_escalles:0 "Escalles"
+ b_sangatte:0 "Sangatte"
+ b_andres:0 "Andres"
+
+ c_fraisnes:0 "Fraisnes"
+ b_fraisnes:0 "Fraisnes"
+ b_belgentier:0 "Belgentier"
+ b_ardengost:0 "Ardengost"
+ 
+ c_chablis:0 "Chablis"
+ b_chablis:0 "Chablis"
+ b_bondilly:0 "Bondilly"
+ b_brunville:0 "Brunville"
+ 
+ c_bisont:0 "Bisont"
+ b_bisont:0 "Bisont"
+ b_chavanon:0 "Chavanon" 
+ b_bussy:0 "Bussy"
+
+ d_brume:0 "Brume"
+ c_brume:0 "Brume"
+ b_brume:0 "Brume"
+ b_ligure:0 "Ligure"
+ b_varazze:0 "Varazze"
+ b_arenzano:0 "Arenzano"
+
+ c_torraine:0 "Torraine"
+ b_torraine:0 "Torraine"
+ b_scragnola:0 "Scragnola"
+ 
+ d_lucain:0 "Lucain"
+ c_lucain:0 "Lucain"
+ b_lucain:0 "Lucain"
+ b_epinal:0 "Epinal"
+ b_harole:0 "Harole"
+ b_dompaire:0 "Dompaire"
+ 
+ c_lemo:0 "Lemo"
+ b_lemo:0 "Lemo"
+ b_primat:0 "Primat"
+ b_villevieux:0 "Villevieux"
+ 
+ c_thours:0 "Thours"
+ b_thours:0 "Thours"
+ b_derbamont:0 "Derbamont"
+ b_marfaux:0 "Marfaux"
+
+ c_lusigan:0 "Lusigan"
+ b_lusigan:0 "Lusigan"
+ b_peufard:0 "Peufard"
+ b_nesmy:0 "Nesmy"
+
+ d_zacharie:0 "Zacharie"
+ c_zacharie:0 "Zacharie"
+ b_zacharie:0 "Zacharie"
+ b_sarre:0 "Sarre"
+ b_reding:0 "Reding"
+ b_nider:0 "Nider"
+
+ c_archembault:0 "Archembault"
+ b_archembault:0 "Archembault"
+ b_kerrale:0 "Kerrale"
+ b_kerrale:0 "Kerrale"
+ b_aouste:0 "Aouste"
+ 
+ c_charente:0 "Charente"
+ b_charente:0 "Charente"
+ b_plaise:0 "Plaise"
+ b_arpenti:0 "Arpenti"
+ 
+ c_cavaellon:0 "Cavaellon"
+ b_cavaellon:0 "Cavaellon"
+ b_pouges:0 "Pouges"
+ b_lannuzel:0 "Lannuzel"
+ 
+ d_rhodos:0 "Rhodos"
+ c_rhodos:0 "Rhodos"
+ b_rhodos:0 "Rhodos"
+ b_tropez:0 "Tropez"
+ b_cavalaire:0 "Cavalaire"
+ b_gardaine:0 "Gardaine"
+
+ c_lahourd:0 "Lahourd"
+ b_lahourd:0 "Lahourd"
+ b_larisse:0 "Larisse"
+ b_nauplie:0 "Nauplie"
+
+ c_bordeu:0 "Bordeu"
+ b_bordeu:0 "Bordeu"
+ b_patras:0 "Patras"
+ 
+ c_auch:0 "Auch"
+ b_auch:0 "Auch"
+ b_laurion:0 "Laurion"
+ b_scillonte:0 "Scillonte"
