Adding of Morfis

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -785,3 +785,925 @@
  b_auch:0 "Auch"
  b_laurion:0 "Laurion"
  b_scillonte:0 "Scillonte"
+ 
+ k_adrestia:0 "Adrestia"
+ d_enbarr:0 "Enbarr"
+ c_enbarr:0 "Enbarr"
+ b_enbarr:0 "Enbarr"
+ b_wilhelmdorf:0 "Wilhelmdorf"
+ b_ionia:0 "Ionia"
+ b_lyca:0 "Lyca"
+ b_seirosen:0 "Seirosen"
+ b_hennigsdorf:0 "Hennigsdorf"
+
+ c_brunnau:0 "Brunnau"
+ b_brunnau:0 "Brunnau"
+ b_erkeln:0 "Erkeln"
+ b_wolfholz:0 "Wolfholz"
+
+ c_ingendorf:0 "Ingendorf"
+ b_ingendorf:0 "Ingendorf"
+ b_leste:0 "Leste"
+ b_milbitz:0 "Milbitz"
+
+ c_bauwersfriet:0 "Bauwersfriet"
+ b_bauwersfriet:0 "Bauwersfriet"
+ b_reitmehring:0 "Reitmehring"
+ b_baddeckenstedt:0 "Baddeckenstedt"
+
+ c_seershausen:0 "Seershausen"
+ b_seershausen:0 "Seershausen"
+ b_sommersbach:0 "Sommersbach"
+ b_bleischmelze:0 "Bleischmelze"
+ 
+ c_froitzheim:0 "Froitzheim"
+ b_froitzheim:0 "Froitzheim"
+ b_bockert:0 "Bockert"
+ b_keutschen:0 "Keutschen"
+
+ d_hresvelg:0 "Hresvelg"
+ c_hresvelg:0 "Hresvelg"
+ b_hresvelg:0 "Hresvelg"
+ b_babel:0 "Babel"
+ b_garzauer:0 "Garzauer"
+ b_fasen:0 "Fasen"
+ 
+ c_gorspen:0 "Gorspen"
+ b_gorspen:0 "Gorspen"
+ b_biding:0 "Biding"
+ b_schmitzheide:0 "Schmitzheide"
+
+ c_dreikronen:0 "Dreikronen"
+ b_dreikronen:0 "Dreikronen"
+ b_apenrade:0 "Apenrade"
+ b_beftoft:0 "Beftoft"
+ 
+ c_jungensberg:0 "Jungensberg"
+ b_jungensberg:0 "Jungensberg"
+ b_brendstrup:0 "Brendstrup"
+ b_gabel:0 "Gabel"
+
+ c_kerben:0 "Kerben"
+ b_kerben:0 "Kerben"
+ b_hoxlund:0 "Hoxlund"
+ b_gramm:0 "Gramm"
+
+ d_hrym:0 "Hrym"
+ c_hrym:0 "Hrym"
+ b_hrym:0 "Hrym"
+ b_eversten:0 "Eversten"
+ b_bornhorst:0 "Bornhorst"
+ b_etzhorn:0 "Etzhorn"
+
+ c_maugstrup:0 "Maugstrup"
+ b_maugstrup:0 "Maugstrup"
+ b_drontheim:0 "Drontheim"
+ b_haberslund:0 "Haberslund"
+ 
+ c_jerpstead:0 "Jerpstead"
+ b_jerpstead:0 "Jerpstead"
+ b_gehlau:0 "Gehlau"
+ b_hoyer:0 "Hoyer"
+
+ c_boacker:0 "Boacker"
+ b_boacker:0 "Boacker"
+ b_duppel:0 "Duppel"
+ b_emmerlef:0 "Emmerlef"
+
+ c_durhaus:0 "Durhaus"
+ b_durhaus:0 "Durhaus"
+ b_renz:0 "Renz"
+
+ d_niendorf:0 "Niendorf"
+ c_niendorf:0 "Niendorf"
+ b_niendorf:0 "Niendorf"
+ b_stockeldorf:0 "Stockeldorf"
+ b_tave:0 "Tave"
+ b_karlshof:0 "Karlshof"
+
+ c_bandorf:0 "Bandorf"
+ b_bandorf:0 "Bandorf"
+ b_tossen:0 "Tossen"
+ b_anetstreut:0 "Anetsreut"
+
+ c_bertensdorf:0 "Bertensdorf"
+ b_bertensdorf:0 "Bertensdorf"
+ b_imsbach:0 "Imsbach"
+ b_derichsberg:0 "Derichsberg"
+
+ d_gronder:0 "Gronder"
+ c_gronder:0 "Gronder"
+ b_gronder:0 "Gronder"
+ b_friedrichstadt:0 "Friedrichstadt"
+ b_dresde:0 "Dresde"
+ b_prohlis:0 "Prohlis"
+
+ c_welten:0 "Welten"
+ b_welten:0 "Welten"
+ b_steinsbrunn:0 "Steinsbrunn"
+ b_eisenhutsrot:0 "Eisenhutsrot"
+
+ c_hangendenbuch:0 "Hangendenbuch"
+ b_hangendenbuch:0 "Hangendenbuch"
+ b_dachtel:0 "Dachtel"
+ b_bernitt:0 "Bernitt"
+
+ c_mariensiel:0 "Mariensiel"
+ b_mariensiel:0 "Mariensiel"
+ b_bettenhausen:0 "Bettenhausen"
+ b_mettenbuch:0 "Mettenbuch"
+
+ d_airmid:0 "Airmid"
+ c_airmid:0 "Airmid"
+ b_airmid:0 "Airmid"
+ b_altstadt:0 "Altstadt"
+ b_werder:0 "Werder"
+ b_norden:0 "Norden"
+
+ c_schollbrun:0 "Schollbrun"
+ b_Schollbrun:0 "Schollbrun"
+ b_beles:0 "Beles"
+ b_klerf:0 "Klerf"
+
+ c_heede:0 "Heede"
+ b_heede:0 "Heede"
+ b_kreuz:0 "Kreuz"
+ b_monnerich:0 "Monnerich"
+
+ c_nordorf:0 "Nordorf"
+ b_nordorf:0 "Nordorf"
+ b_helzingen:0 "Helzingen"
+ b_fels:0 "Fels"
+
+ d_rugen:0 "Rugen"
+ c_rugen:0 "Rugen"
+ b_rugen:0 "Rugen"
+ b_samtens:0 "Samtens"
+ b_kluis:0 "Kluis"
+
+ c_badenhagen:0 "Badenhagen"
+ b_badenhagen:0 "Badenhagen"
+ b_baldau:0 "Baldau"
+ 
+ d_aegir:0 "Aegir"
+ c_aegir:0 "Aegir"
+ b_aegir:0 "Aegir"
+ b_medingshoven:0 "Medingshoven"
+ b_beuel:0 "Beuel"
+ b_augistin:0 "Augistin"
+
+ c_gosabruck:0 "Gosabruck"
+ b_gosabruck:0 "Gosabruck"
+ b_hasen:0 "Hasen"
+ b_zeilhard:0 "Zeilhard"
+
+ c_heessen:0 "Heessen"
+ b_heessen:0 "Heessen"
+ b_eichholz:0 "Eichholz"
+ b_lemzen:0 "Lemzen"
+
+ c_kosa:0 "Kosa"
+ b_kosa:0 "Kosa"
+ b_schwoche:0 "Schwoche"
+ b_waldfrieden:0 "Waldfrieden"
+ 
+ c_steinerkirchen:0 "Steinerkirchen"
+ b_steinerkirchen:0 "Steinerkirchen"
+ b_isterbies:0 "Isterbies"
+ 
+ c_lichen:0 "Lichen"
+ b_lichen:0 "Lichen"
+ b_villingen:0 "Villingen"
+ b_neusorge:0 "Neusorge"
+ 
+ d_varley:0 "Varley"
+ c_varley:0 "Varley"
+ b_varley:0 "Varley"
+ b_eisenburg:0 "Eisenburg"
+ b_brunnthal:0 "Brunnthal"
+ b_pullach:0 "Pullach"
+
+ c_griebow:0 "Griebow"
+ b_griebow:0 "Griebow"
+ b_riehausen:0 "Riehausen"
+ b_eischleben:0 "Eischleben"
+ 
+ c_pente:0 "Pente"
+ b_pente:0 "Pente"
+ b_collis:0 "Collis"
+ b_wustermark:0 "Wustermark"
+ 
+ c_questnitz:0 "Questnitz"
+ b_questnitz:0 "Questnitz"
+ b_erpertshof:0 "Erpertshof"
+ b_wilecker:0 "Wilecker"
+ 
+ c_frischenburg:0 "Frischenburg"
+ b_frischenburg:0 "Frischenburg"
+ b_engerdorf:0 "Engerdorf"
+ b_unternogg:0 "Unternogg"
+
+ d_bergliez:0 "Bergliez"
+ c_bergliez:0 "Bergliez"
+ b_bergliez:0 "Bergliez"
+ b_merceus:0 "Merceus"
+ b_beckum:0 "Beckum"
+ b_zement:0 "Zement"
+
+ c_dalwitzhof:0 "Dalwitzhof"
+ b_daltiwzhof:0 "Dalwitzhof"
+ b_hinschenfeld:0 "Hinschenfeld"
+ b_eyerlohe:0 "Eyerlohe"
+ 
+ c_lendrass:0 "Lendrass"
+ b_lendrass:0 "Lendrass"
+ b_dietenwengen:0 "Dietenwengen"
+ b_etting:0 "Etting"
+
+ c_kell:0 "Kell"
+ b_kell:0 "Kell"
+ b_woffendorf:0 "Woffendorf"
+ b_allmenrod:0 "Allmenrod"
+
+ d_stieglitz:0 "Stieglitz"
+ c_stieglitz:0 "Stieglitz"
+ b_stieglitz:0 "Stieglitz"
+ b_freiburg:0 "Freiburg"
+ b_rieselfeld:0 "Rieselfeld"
+ b_lehen:0 "Lehen"
+
+ c_guarda:0 "Guarda"
+ b_guarda:0 "Guarda"
+ b_nordhellen:0 "Nordhellen"
+ b_ruppmannsburg:0 "Ruppmannsburg"
+
+ c_oberleiten:0 "Oberleiten"
+ b_overleiten:0 "Oberleiten"
+ b_waddenserwisch:0 "waddenserwisch"
+ b_zweitschen:0 "Zweitschen"
+
+ c_piskaborn:0 "Piskaborn"
+ b_piskaborn:0 "Piskaborn"
+ b_dudenrode:0 "Dudenrode"
+ b_blemsen:0 "Blemsen"
+
+ d_gerth:0 "Gerth"
+ c_gerth:0 "Gerth"
+ b_gerth:0 "Gerth"
+ b_aden:0 "Aden"
+ b_kloster:0 "Kloster"
+ b_karlsruhe:0 "Karlsruhe"
+
+ c_swabach:0 "Swabach"
+ b_swabach:0 "Swabach:
+ b_osterspai:0 "Osterspai"
+ b_steinklingen:0 "Steinklingen"
+ 
+ c_waltenham:0 "Waltenham"
+ b_waltenham:0 "Waltenham"
+ b_shnelleman:0 "Shnelleman"
+ b_barken:0 "Barken"
+
+ c_westerhofen:0 "Westerhofen"
+ b_westerhofen:0 "Westerhofen"
+ b_metterich:0 "Metterich"
+ b_harmating:0 "Harmating"
+
+ d_rusalka:0 "Rusalka"
+ c_rusalka:0 "Rusalka"
+ b_rysum:0 "Rysum"
+ b_loquard:0 "Loquard"
+ b_kampfen:0 "Kampfen"
+
+ c_hornschlag:0 "Hornschlag"
+ b_hornschlag:0 "Hornschlag"
+ b_tachau:0 "Tachau"
+ b_aussig:0 "Aussig"
+
+ c_thoenischen:0 "Thoenischen"
+ b_thoenischen:0 "Thoenischen"
+ b_schlan:0 "Schlan"
+ b_laun:0 "Laun"
+
+ c_krausebauden:0 "Krausebauden"
+ b_krausebauden:0 "Krausebauden"
+ b_teplitz:0 "Teplitz"
+ b_komtau:0 "Komtau"
+ 
+ d_boramas:0 "Boramas"
+ c_boramas:0 "Boramas"
+ b_boramas:0 "Boramas"
+ b_borkum:0 "Borkum"
+ b_rektor:0 "Rektor"
+ b_reiter:0 "Reiter"
+
+ c_passern:0 "Passern"
+ b_passern:0 "Passern"
+ b_bakau:0 "Bakau"
+ b_frauenbach:0 "Frauenbach"
+ 
+ c_schmidenburg:0 "Schmidenburg"
+ b_schmidenburg:0 "Schmidenburg"
+ b_botoschan:0 "Botoschan"
+ b_kronstaft:0 "Kronstaft"
+
+ c_phillipenau:0 "Phillipenau"
+ b_phillipenau:0 "Phillipenau"
+ b_rebnick:0 "Rebnick"
+ b_neumarkt:0 "Neumarkt"
+ 
+ d_morgaine:0 "Morgaine"
+ c_morgaine:0 "Morgaine"
+ b_morgaine:0 "Morgaine"
+ b_eiksen:0 "Eiksen"
+ b_kelmis:0 "Kelmis"
+ b_blieberg:0 "Blieberg"
+
+ c_vorderlain:0 "Vorderlain"
+ b_vorderlain:0 "Vorderlain"
+ b_wultsch:0 "Wultsch"
+ b_sathmar:0 "Sathmar"
+
+ c_kleinsitzen:0 "Kleinsitzen"
+ b_kleinsitzen:0 "Kleinsitzen"
+ b_uddenheim:0 "Uddenheim"
+ b_sittenhardt:0 "Sittenhardt"
+
+ c_dachsberg:0 "Dachsberg"
+ b_dachsberg:0 "Dachsberg"
+ b_warmsroth:0 "Warmsroth"
+ b_mustin:0 "Mustin"
+ 
+ c_plechin:0 "Plechin"
+ b_plechin:0 "Plechin"
+ b_wolfshoven:0 "Wolfshoven"
+ b_stollberg:0 "Stollberg"
+ 
+ d_essar:0 "Essar"
+ c_essar:0 "Essar"
+ b_essar:0 "Essar"
+ b_frillendorf:0 "Frillendorf"
+ b_frohn:0 "Frohn"
+ b_berger:0 "Berger"
+
+ c_grosseg:0 "Grosseg"
+ b_grosseg:0 "Grosseg"
+ b_seeth:0 "Seeth"
+ b_obertas:0 "Obertas"
+
+ d_engel:0 "Engel"
+ c_engel:0 "Engel"
+ b_engel:0 "Engel"
+ b_alla:0 "Alla"
+ b_seraph:0 "Seraph"
+ b_sandfort:0 "Sandfort"
+
+ c_juten:0 "Juten"
+ b_juten:0 "Juten"
+ b_spiekerdorf:0 "Spiekerdorf"
+ b_sanz:0 "Sanz"
+
+ k_fangs:0 "Fangs"
+ d_olrun:0 "Olrun"
+ c_olrun:0 "Olrun"
+ b_olrun:0 "Olrun"
+ b_seitschen:0 "Seitschen"
+ b_wendelin:0 "Wendelin"
+ b_gaupel:0 "Gaupel"
+ 
+ c_mundorf:0 "Mundorf"
+ b_mundorf:0 "Mundorf"
+ b_achtum:0 "Achtum"
+ b_drognitz:0 "Drognitz"
+ 
+ c_kronburg:0 "Kronburg"
+ b_kronburg:0 "Kronburg"
+ b_obersinn:0 "Obersinn"
+ b_kuxwinkel:0 "Kuxwinkel"
+
+ c_schatz:0 "Schatz"
+ b_schatz:0 "Schatz"
+ b_nettelstrauf:0 "Nettelstrauf"
+ b_kirchlehen:0 "Kirchlehen"
+
+ d_hevring:0 "Hevring"
+ c_hevring:0 "Hevring:
+ b_hevring:0 "Hevring"
+ b_hinten:0 "Hinten"
+ b_peheim:0 "Peheim"
+ b_wettersfeld:0 "Wettersfeld"
+
+ c_paal:0 "Paal"
+ b_paal:0 "Paal"
+ b_eiersheim:0 "Eiersheim"
+
+ c_biserl:0 "Biserl"
+ b_biserl:0 "Biserl"
+ b_niederstuttern:0 "Niederstuttern"
+ b_eitzing:0 "Eitzing"
+
+ c_langgassen:0 "Langgassen"
+ b_langgassen:0 "Langgassen"
+ b_altenrath:0 "Altenrath"
+ b_grafenkirchen:0 "Grafenkirchen"
+
+ c_bodendorf:0 "Bodendorf"
+ b_bodendorf:0 "Bodendorf"
+ b_flaschberg:0 "Flaschberg"
+ b_refflingsen:0 "Refflingsen"
+
+ d_reiss:0 "Reiss"
+ c_reiss:0 "Reiss"
+ b_reiss:0 "Reiss"
+ b_dietenhan:0 "Dietenhan"
+ b_hergerhausen:0 "Hergerhausen"
+ b_bronnzell:0 "Bronnzell"
+
+ c_minning:0 "Minning"
+ b_minning:0 "Minning"
+ b_abbingwehr:0 "Abbingwehr"
+ b_kielerkamp:0 "Kielerkamp"
+ 
+ c_gallmanswegg:0 "Gallmanswegg"
+ b_gallmanswegg:0 "Gallmanswegg"
+ b_schadewohl:0 "Schadewohl"
+ b_hofweiter:0 "Hofweiter"
+
+ c_ruprechtshofen:0 "Ruprechtshofen"
+ b_ruprechtshofen:0 "Ruprechtshofen"
+ b_andeer:0 "Andeer"
+ b_melchnau:0 "Melchnau"
+
+ d_ochs:0 "Ochs"
+ c_ochs:0 "Ochs"
+ b_ochs:0 "Ochs"
+ b_kraudorf:0 "Kraudorf"
+ b_hinterhufe:0 "Hinterhufe"
+ b_velten:0 "Velten"
+
+ c_pitten:0 "Pitten"
+ b_pitten:0 "Pitten"
+ b_wallisellen:0 "Wallisellen"
+ b_puntrash:0 "Puntrash"
+
+ c_elling:0 "Elling"
+ b_elling:0 "Elling"
+ b_gingolf:0 "Gingolf"
+ b_kurchen:0 "Kurchen"
+
+ c_maxlon:0 "Maxlon"
+ b_maxlon:0 "Maxlon"
+ b_mohlin:0 "Mohlin"
+ b_toggenburg:0 "Toggenburg"
+
+ d_bartels:0 "Bartels"
+ c_bartels:0 "Bartels"
+ b_bartels:0 "Bartels"
+ b_altman:0 "Altman"
+ b_bomke:0 "Bomke"
+ b_curau:0 "Curau"
+
+ c_krail:0 "Krail"
+ b_krail:0 "Krail"
+ b_emmental:0 "Emmental"
+ b_lutzelfluh:0 "Lutzelfluh"
+
+ c_lanau:0 "Lanau"
+ b_lanau:0 "Lanau"
+ b_truns:0 "Truns"
+ b_blatten:0 "Blatten"
+
+ c_flurnsbach:0 "Flurnsbach"
+ b_flurnsbach:0 "Flurnsbach"
+ b_beromunster:0 "Beromunster"
+ b_sachseln:0 "Sachseln"
+
+ d_nuvelle:0 "Nuvelle"
+ c_nuvelle:0 "Nuvelle"
+ b_nuvelle:0 "Nuvelle"
+ b_riedling:0 "Riedling"
+ b_degelsdorf:0 "Degelsdorf"
+ b_jagtsberg:0 "Jagtsberg"
+
+ c_lindl:0 "Lindl"
+ b_lindl:0 "Lindl"
+ b_fusio:0 "Fusio"
+ b_isewald:0 "Isewald"
+
+ c_pflach:0 "Pflach"
+ b_pflach:0 "Pflach"
+ b_sedrun:0 "Sedrun"
+ b_gams:0 "Gams"
+
+ c_mittrau:0 "Mittrau"
+ b_mittrau:0 "Mittrau"
+ b_oberhalstein:0 "Oberhalstein"
+ b_hunneg:0 "Hunneg"
+
+ d_skade:0 "Skade"
+ c_skade:0 "Skade"
+ b_skade:0 "Skade"
+ b_felderkoster:0 "Felderkoster"
+ b_gilgen:0 "Gilgen"
+ b_stiershof:0 "Stiershof"
+
+ c_wademanssfeld:0 "Wademanssfeld"
+ b_wademanssfeld:0 "Wademanssfeld"
+ b_cully:0 "Cully"
+ b_seon:0 "Seon"
+ 
+ c_trefning:0 "Trefning"
+ b_trefning:0 "Trefning"
+ b_dongio:0 "Dongio"
+ b_brienz:0 "Brienz"
+
+ c_petzeldorf:0 "Petzeldorf"
+ b_petzeldorf:0 "Petzeldorf"
+ b_thun:0 "Thun"
+
+ c_latzenhof:0 "Latzenhof"
+ b_latzenhof:0 "Latzenhof"
+ b_schanis:0 "Schanis"
+
+ d_brionac:0 "Brionac"
+ c_brionac:0 "Brionac"
+ b_brionac:0 "Brionac"
+ b_liebhof:0 "Liebhof"
+ b_bah:0 "Bah"
+ b_heidendorf:0 "Heidendorf"
+
+ c_theisenberg:0 "Theisenberg"
+ b_theisenberg:0 "Theisenberg"
+ b_susch:0 "Susch"
+ b_monstein:0 "Monstein"
+
+ c_obertiefen:0 "Obertiefen"
+ b_obertiefen:0 "Obertiefen"
+ b_andwil:0 "Andwil"
+ b_winterhur:0 "Winterhur"
+
+ c_hoferdorf:0 "Hoferdorf"
+ b_hoferdorf:0 "Hoferdorf"
+ b_schupfheim:0 "Schupfheim"
+ b_salums:0 "Salums"
+
+ d_sleipner:0 "Sleipner"
+ c_sleipner:0 "Sleipner"
+ b_sleipner:0 "Sleipner"
+ b_bansrade:0 "Bansrade"
+ b_altenrain:0 "Altenrain"
+ b_mitteldorf:0 "Mitteldorf"
+
+ c_steyer:0 "Steyer"
+ b_steyer:0 "Steyer"
+ b_jegenstorf:0 "Jegenstorf"
+ b_oerschgen:0 "Oerschgen"
+
+ c_korb:0 "Korb"
+ b_korb:0 "Korb"
+ b_sitten:0 "Sitten"
+ b_donhausen:0 "Donhausen"
+
+ c_untereich:0 "Untereich"
+ b_untereich:0 "Untereich"
+ b_ayer:0 "Ayer"
+ b_sembrancher:0 "Sembrancher"
+
+ c_nostra:0 "Nostra"
+ b_nostra:0 "Nostra"
+ b_wanden:0 "Wanden"
+ b_hurden:0 "Hurden"
+
+ d_arundel:0 "Arundel"
+ c_arundel:0 "Arundel"
+ b_arundel:0 "Arundel"
+ b_mandorf:0 "Mandorf"
+ b_alvern:0 "Alvern"
+ b_allerting:0 "Allerting"
+
+ c_tarzendorf:0 "Tarzendorf"
+ b_tarzendorf:0 "Tarzendorf"
+ b_sernf:0 "Sernf"
+ b_goetzendorf:0 "Goetzendorf"
+
+ c_ausserrhoden:0 "Ausserrhoden"
+ b_ausserrhoden:0 "Ausserrhoden"
+ b_solothurn:0 "Solothurn"
+
+ c_aarburg:0 "Aarburg"
+ b_aarburg:0 "Aarburg"
+ b_zemendorf:0 "Zemendorf"
+ b_biel:0 "Biel"
+
+ c_tavetsch:0 "Tavetsch"
+ b_tavetsch:0 "Tavetsch:
+ b_arderal:0 "Arderal"
+ b_belp:0 "Belp"
+
+ c_alle:0 "Alle"
+ b_alle:0 "Alle"
+ b_lindberg:0 "Lindberg"
+ b_lotschental:0 "Lotschental"
+
+ d_schwan:0 "Schwan"
+ c_schwan:0 "Schwan"
+ b_schwan:0 "Schwan"
+ b_zwanenteich:0 "Zwanenteich"
+ b_gengare:0 "Gengare"
+ b_giantsich:0 "Giantsich"
+
+ c_windhag:0 "Windhag"
+ b_windhag:0 "Windhag"
+ b_schwabenhof:0 "Schwabenhof"
+ b_jedenspeigen:0 "Jedenspeigen"
+ 
+ c_tollertau:0 "Tollertau"
+ b_tollertau:0 "Tollertau"
+ b_nauders:0 "Nauders"
+ b_oberpfaffen:0 "Oberpfaffen"
+
+ d_huldra:0 "Huldra"
+ c_huldra:0 "Huldra"
+ b_shellsitz:0 "Shellsitz"
+ b_bettenkampf:0 "Bettenkampf"
+ b_goldenbeek:0 "Goldenbeek"
+
+ c_eberweiss:0 "Eberweiss"
+ b_eberweiss:0 "Eberweiss"
+ b_kranz:0 "Kranz"
+ b_wilchingen:0 "Wilchingen"
+
+ c_kleinberg:0 "Kleinberg"
+ b_kleinberg:0 "Kleinberg"
+ b_rinkole:0 "Rinkole"
+ b_langenfeld:0 "Langenfeld"
+
+ c_geserberg:0 "Geserberg"
+ b_geserberg:0 "Geserberg"
+ b_neuhaus:0 "Neuhaus"
+ b_waitzendorf:0 "Waitzendorf"
+
+ d_oghma:0 "Oghma"
+ c_oghma:0 "Oghma"
+ b_oghma:0 "Oghma"
+ b_remire:0 "Remire"
+ b_neuleben:0 "Neuleben"
+ b_wapenfeld:0 "Wapenfeld"
+
+ c_berler:0 "Berler"
+ b_berler:0 "Berler"
+ b_kindtha:0 "Kindtha"
+ b_weissenhof:0 "Weissenhof"
+ b_rinderschinken:0 "Rinderschinken"
+
+ c_bichlach:0 "Bichlach"
+ b_bichlach:0 "Bichlach"
+ b_glarsdorf:0 "Glarsdorf"
+ b_anlauftal:0 "Anlauftal"
+ 
+ c_eisenthal:0 "Eisenthal"
+ b_eisenthal:0 "Eisenthal"
+ b_glasing:0 "Glasing"
+ b_gwiggen:0 "Gwiggen"
+
+ e_brigid:0 "Brigid"
+ k_brigid:0 "Brigid"
+ d_deoir_aine:0 "Deoir Aine"
+ c_banten:0 "Banten"
+ b_banten:0 "Banten"
+ b_tamao:0 "Tamao"
+
+ c_lembak:0 "Lembak"
+ b_lembak:0 "Lembak"
+ b_kamnom:0 "Kamnom"
+ b_takesar:0 "Takesar"
+
+ d_bholcanach:0 "Bholcanach"
+ c_ardnamurchan:0 "Ardnamurchan"
+ b_ardnamurchan:0 "Ardnamurchan"
+ b_pangrun:0 "Pangrun"
+ b_temelina:0 "Temelina"
+
+ c_suiochan:0 "Suiochan"
+ b_suiochan:0 "Suiochan"
+ b_poneriana:0 "Poneriana"
+ b_gormen:0 "Gormen"
+ 
+ c_cheviot:0 "Cheviot"
+ b_cheviot:0 "Cheviot"
+ b_tuamde:0 "Tuamde"
+ b_bhanecoire:0 "Bhanecoire"
+
+ c_cuilin:0 "Cuilin"
+ b_cuilin:0 "Cuilin"
+ b_nediona:0 "Nediona"
+ b_tirknowe:0 "Tirknowe"
+ b_mhelek:0 "Mhelek"
+
+ d_grannach:0 "Grannach"
+ c_dundee:0 "Dundee"
+ b_dundee:0 "Dundee"
+ b_ballymullagh:0 "Ballymullagh"
+ b_bhaille:0 "Bhaille"
+ b_pollboas:0 "Pollboas"
+
+ c_clochan:0 "Clochan"
+ b_clochan:0 "Clochan"
+ b_bhenge:0 "Bhenge"
+ b_pollderry:0 "Pollderry"
+ 
+ c_glencoe:0 "Glencoe"
+ b_glencoe:0 "Glencoe"
+ b_nuagorm:0 "Nuagorm"
+ b_kubha:0 "Khuba"
+
+ d_aedach:0 "Aedach"
+ c_bhearaig:0 "Bhearaig"
+ c_bhearaig:0 "Bhearaig"
+ b_kanono:0 "Kanono"
+ b_sailurlar:0 "Sailurlar"
+
+ c_bennevis:0 "Bennevis"
+ b_bennevis:0 "Bennevis"
+ b_seanroe:0 "Seanroe"
+ b_bhano:0 "Bhano"
+
+ c_bryniau:0 "Bryniau"
+ b_bryniau:0 "Bryniau"
+ b_gondou:0 "Gondou"
+ b_garbhdubh:0 "Garbhdubh"
+
+ c_briosto:0 "Briosto"
+ b_briosto:0 "Briosto"
+ b_lisiath:0 "Lisiath"
+ b_buiglen:0 "Buiglen"
+ b_cruachoma:0 "Cruachoma"
+
+ d_seultach:0 "Seultach"
+ c_skyrne:0 "Skyrne"
+ b_skyrne:0 "Skyrne"
+ b_namemagh:0 "Namemagh"
+ b_bencrabhat:0 "Bencrabhat"
+
+ c_claonfhearta:0 "Claonfhearta"
+ b_claonfhearta:0 "Claonfhearta" 
+ b_portdimie:0 "Portdimie"
+ b_culmaigh:0 "Culmaigh"
+
+ c_forrad:0 "Forrad"
+ b_forrad:0 "Forrad"
+ b_ardcobhail:0 "Ardcobhail"
+ b_cruachsidhe:0 "Cruachsidhe"
+ b_sliabh:0 "Sliabh"
+ b_lissean:0 "Lissean"
+ b_bhassatire:0 "Bhassatire"
+
+ c_orbsen:0 "Orbsen"
+ b_orbsen:0 "Orbsen"
+ b_cucoire:0 "Cucoire"
+ b_eiscirtra:0 "Eiscirtra"
+ 
+ c_duartaine:0 "Duartaine"
+ b_duartaine:0 "Duartaine"
+ b_oghnafraoch:0 "Oghnafraoch"
+
+ c_tuine:0 "Tuine"
+ b_tuine:0 "Tuine"
+ b_inniscul:0 "Inniscul"
+
+ k_bhailearach:0 "Bhailearach"
+ d_ebhisa:0 "Ebhisa"
+ c_bhila:0 "Bhila"
+ b_bhila:0 "Bhila"
+ b_bhanut:0 "Bhanut"
+ b_saramea:0 "Saramea"
+
+ c_eularia:0 "Eularia"
+ b_eularia:0 "Eularia"
+ b_kilcannor:0 "Kilcannor"
+ b_bhacoill:0 "Bhacoill"
+ b_eskra:0 "Eskra"
+
+ c_talaia:0 "Talaia"
+ b_talaia:0 "Talaia"
+ b_bonde:0 "Bonde"
+ b_mea:0 "Mea"
+
+ d_madhorca:0 "Madhorca"
+ c_pidhusa:0 "Pidhusa"
+ b_pidhusa:0 "Pidhusa"
+ b_bhara:0 "Bhara"
+
+ c_pailme:0 "Pailme"
+ b_pailme:0 "Pailme"
+ b_nato:0 "Nato"
+ b_nathalo:0 "Nathalo"
+
+ c_coipeadh:0 "Coipeadh"
+ b_coipeadh:0 "Coipeadh"
+ b_deulu:0 "Deulu"
+ b_portaobh:0 "Portaobh"
+
+ c_manacor:0 "Manacor"
+ b_manacor:0 "Manacor"
+ b_tearmann:0 "Tearmann"
+ b_oileanaloa:0 "Oileanaloa"
+ b_achadbonara:0 "Achadbonara"
+
+ d_midhorca:0 "Midhorca"
+ c_dun_midh:0 "Dun Midh"
+ b_dun_midh:0 "Dun Midh"
+ b_bealachbhakana:0 "bealachbhakana"
+ b_ambalatsopka:0 "Ambalatsopka"
+ b_tabhlamena:0 "Tabhlamena"
+ 
+ c_gliomach:0 "Gliomach"
+ b_gliomach:0 "Gliomach"
+ b_amlaibhitaka:0 "Amlaibhitaka"
+ b_bhndrkely:0 "Bhndrkely"
+
+ c_inis_portan:0 "Inis Portan"
+ b_inis_portan:0 "Inis Portan"
+ b_ambundoran:0 "Ambundoran"
+ b_masamenoe:0 "Masamenoe"
+
+ k_gymnesiach:0 "Gymnesiach"
+ d_triur_seithir:0 "Triur Seithir"
+ c_gearr:0 "Gearr"
+ b_gearr:0 "Gearr"
+
+ c_dubh:0 "Dubh"
+ b_dubh:0 "Dubh"
+ b_sceachdany:0 "Sceachdany"
+
+ c_fhada:0 "Fhada"
+ b_fhada:0 "Fhada"
+ b_bebhada:0 "Bebhada"
+
+ d_beirt_brethir:0 "Beirt Brethir"
+ c_hobart:0 "Hobart"
+ b_hobart:0 "Hobart"
+ b_kamendrigarbh:0 "Kamendrigarbh"
+ b_dromdillach:0 "Dromdillach"
+
+ c_ewan:0 "Ewan"
+ b_ewan:0 "Ewan"
+ b_dunbabet:0 "Dunbabet"
+ b_ambolidha:0 "Ambolidha"
+ 
+ d_athair_mor:0 "Athair Mor"
+ c_gadhura:0 "Gadhura"
+ b_gadhura:0 "Gadhura"
+ b_maroliath:0 "Maroliath"
+ b_muilleala:0 "Muilleala"
+ 
+ c_ardara:0 "Ardara"
+ b_ardara:0 "Ardara"
+ b_ankodona:0 "Ankodona"
+ b_orla:0 "Orla"
+ b_marindonacill:0 "Marindonacill"
+
+ c_talamcrainn:0 "Talamcrainn"
+ b_talamcrainn:0 "Talamcrainn"
+ b_analodore:0 "Analodore"
+ b_miantsoaribho:0 "Miantsoaribho"
+
+ c_sanluri:0 "Sanluri"
+ b_sanluri:0 "Sanluri"
+ b_andregorua:0 "Andreagorua"
+ b_maharibho:0 "Maharibho"
+
+ k_mach:0 "Mach"
+ d_motidha:0 "Motidha"
+ c_drepano:0 "Drepano"
+ b_drepano:0 "Drepano"
+ b_sahatsorua:0 "Sahatsorua"
+ b_ambongatsara:0 "Ambongatsara"
+ 
+ c_elymia:0 "Elymia"
+ b_elymia:0 "Elymia"
+ b_anosibhelo:0 "Anosibhelo"
+ b_bharisato:0 "Bharisato"
+
+ c_inis_motidha:0 "Inis Motidha"
+ b_inis_motidha:0 "Inis Motidha"
+ b_beantaramay:0 "Beantaramay"
+ b_abhe:0 "Abhe"
+ 
+ d_gearga:0 "Gearga"
+ c_syrako:0 "Syrako"
+ b_syrako:0 "Syrako"
+ b_antezamorua:0 "Antezamorua"
+ b_ankiabhe:0 "Ankiabhe"
+ b_zorua:0 "Zorua"
+
+ c_thapso:0 "Thapso"
+ b_thapso:0 "Thapso"
+ b_analamuileann:0 "Analamuileann"
+ b_ballyport:0 "Ballyport"
+
+ c_hiero:0 "Hiero"
+ b_hiero:0 "Hiero"
+ b_bhorua:0 "Bhorua"
+ b_ennislurgan:0 "Ennislurgan"
+ 
